# test-cpp-linux

./: .gitignore  CMakeCommonSettings.cmake  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  utf_converter.cpp  utf_converter.h
scripts/: build_debug_install.sh
